@@ -16,6 +16,7 @@
      ruby/          generated by client's rdoc  before commit work?
 - [ ] Find how to clone postgres datas ?
 **** TODO Correct project setup
+     CLOCK: [2012-05-07 lun. 09:42]--[2012-05-07 lun. 10:14] =>  0:32
      CLOCK: [2012-02-14 mar. 11:12]--[2012-02-14 mar. 11:48] =>  0:36
 - [X] Feed this file with TODO content
 - [X] create a DEPENDENCIES file
@@ -23,4 +24,7 @@
 - [X] Uses autoscan to create a basic autoconf package
 - [X] Switch to GPLv3
 - [X] Correctly set svn:ignore property
-- [ ] pkg-config should search for logger
+- [X] pkg-config should search for logger
+- [ ] Correct use of rainbrurpg-logger
+      - [ ] Must change the logfile name
+      - [ ] Should make the logheader contain server-related information
